--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -515,7 +515,7 @@ input:disabled + .checkmark + .text {
     }
 }
 .-images {
-    height: 90vh;
+    height: 95vh;
     width: auto;
     overflow: scroll;
     overflow-x: hidden;
@@ -556,17 +556,18 @@ input:disabled + .checkmark + .text {
 }
 .products-modal-details {
     overflow: scroll;
-    height: 50vh;
+    height: 65vh;
 }
 .navbar-modal {
     background-color: transparent !important;
     color: $products-bg;
     font-size: 18px;
 }
-.close {
+.product-close {
     z-index: 1;
-    font-size: 50px;
+    font-size: 50px !important;
     color: $white;
+    margin-right: 35px;
 }
 .modal-nav-link {
     display: block;
@@ -585,6 +586,19 @@ input:disabled + .checkmark + .text {
     margin-bottom: 0.5rem;
     border: 0;
     border-top: 1px solid $secondary-color;
+}
+.product-modal-body {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 0 5px;
+}
+.product-modal-dialog,
+.product-modal-content {
+    /* 80% of window height */
+    height: 100%;
+}
+.product-modal-dialog {
+    margin: 0 auto;
 }
 // .modal-body {
 //     position: relative;
