--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -197,6 +197,7 @@
             margin: auto auto 10px auto;
             text-decoration: none;
             color: $secondary-color;
+            display: inline-block;
             .rating {
                 margin-left: 0px;
             }
