added wishlist icon message

--- a/resources/sass/detailOverview.scss
+++ b/resources/sass/detailOverview.scss
@@ -14,6 +14,11 @@
                     font-weight: 900;
                 }
             }
+            &.marked-icon {
+                .-icon {
+                    font-weight: 900;
+                }
+            }
         }
         .filters.filters-mobile {
             width: 100% !important;
