--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -3,6 +3,15 @@
 //         top: 8px;
 //     }
 // }
+.detailspage {
+    .wishlist-icon-modal {
+        &.marked-icon {
+            .-icon {
+                font-weight: 900;
+            }
+        }
+    }
+}
 .-features {
     text-transform: lowercase;
 }
@@ -552,7 +561,6 @@ input:disabled + .checkmark + .text {
         text-decoration: line-through;
         font-size: 25px;
     }
-
 }
 .products-modal-details {
     overflow: scroll;
