--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -240,6 +240,18 @@ input:disabled + .checkmark + .text {
         .listing-container {
             .listing-top-controls {
                 position: absolute;
+
+                .page-navigator-mobile {
+                    width: 35%;
+                    margin: 5px 2px;
+                    display: inline-block;
+                    a {
+                        color: $product-price;
+                    }
+                }
+                .search-navigator {
+                    color: $product-price;
+                }
             }
         }
     }
@@ -254,7 +266,7 @@ input:disabled + .checkmark + .text {
                 .filter-toggle,
                 .view-items-toggle {
                     margin: 5px;
-                    font-size: 23px;
+                    font-size: 15px;
                 }
 
                 .dropdown {
@@ -306,7 +318,7 @@ input:disabled + .checkmark + .text {
             }
 
             .products-container {
-                margin-top: 45px;
+                margin-top: 0px;
 
                 .ls-prod-container {
                     margin: auto;
@@ -317,7 +329,7 @@ input:disabled + .checkmark + .text {
 
                         .ls-product {
                             margin-bottom: 0px;
-                            min-height: 130px;
+                            min-height: 100px;
                             background-position: center;
                         }
                     }
