--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -16,6 +16,9 @@
                 }
             }
         }
+        .product-navigator {
+            margin: 5px;
+        }
         .filters.filters-mobile {
             width: 100% !important;
             background: $secondary-color;
