--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -19,6 +19,7 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $white: #ffffff;
+$off-white: #ffffffba;
 $golden: #e4cd00;
 $grey: #d6d6d6;
 $facebook: #3b5998;
@@ -44,3 +45,4 @@ $navbar-height-mobile: 33px;
 
 ////////////Listing specific
 $listing-top-ctrl-height: 45px;
+$listing-top-ctrl-icon-height: 25px;
