--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -56,6 +56,11 @@ input:disabled + .checkmark + .text {
                 position: -ms-sticky;
                 position: -o-sticky;
                 top: 45px;
+                .filter {
+                    .filter-header {
+                        font-size: 18px;
+                    }
+                }
             }
 
             .clearall-filter-btn {
@@ -87,7 +92,7 @@ input:disabled + .checkmark + .text {
                         .filter-label {
                             display: block;
                             position: relative;
-                            padding-left: 25px;
+                            // padding-left: 25px;
                             margin-bottom: 12px;
                             cursor: pointer;
                             font-size: 14px;
@@ -111,7 +116,8 @@ input:disabled + .checkmark + .text {
                         .checkmark {
                             position: absolute;
                             top: 0;
-                            left: 0;
+                            // left: 0;
+                            right: 0;
                             height: 15px;
                             width: 15px;
 
@@ -404,7 +410,7 @@ input:disabled + .checkmark + .text {
                 }
 
                 .filter {
-                    text-align: center;
+                    text-align: left;
 
                     ul {
                         white-space: normal;
