dimension new mockup

--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -265,6 +265,9 @@
             color: $black;
         }
     }
+    .description-title {
+        font-weight: bold;
+    }
 
     .prod-desc {
         padding: 0px;
