filter issues fixed

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -424,8 +424,13 @@ input:disabled + .checkmark + .text {
                     border-left: solid 10px transparent;
                     border-right: solid 10px transparent;
                 }
+                .sort-filter-input {
+                    text-align: left;
+                    margin: 0px 100px;
+                }
                 .filters-close-btn {
                     background: $products-bg;
+                    color: $black;
                     width: 30%;
                     margin: 10px auto;
                 }
