--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -426,7 +426,7 @@ input:disabled + .checkmark + .text {
                 }
                 .sort-filter-input {
                     text-align: left;
-                    margin: 20px 100px;
+                    margin: 20px 0;
                 }
                 .filters-close-btn {
                     background: $products-bg;
