--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Marcellus+SC');
 
+@import url('https://fonts.googleapis.com/css?family=Fenix');
+
 // Variables
 @import 'variables';
 // Mixins
@@ -55,7 +57,7 @@ $slick-arrow-color: $secondary-color;
 
 html,
 body {
-    font-family: 'Marcellus SC', san-serif;
+    font-family: 'Fenix', serif;
 }
 
 .-btn {
