--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -432,6 +432,15 @@ input:disabled + .checkmark + .text {
                     text-align: left;
                     margin: 20px 0;
                 }
+                .filter-title {
+                    color: $primary-color;
+                    font-size: 20px;
+                }
+                .clearall-filter-btn {
+                    color: $yellow-text-color;
+                    padding: 0;
+                }
+
                 .fix-search {
                     margin-top: 0 !important;
                 }
