fixes for listing page and product detail

--- a/resources/sass/detailOverview.scss
+++ b/resources/sass/detailOverview.scss
@@ -12,6 +12,7 @@
 .products-modal-details {
     overflow: scroll;
     height: 65vh;
+    font-size: 16px;
 }
 .navbar-modal {
     background-color: transparent !important;
