--- a/resources/sass/detailOverview.scss
+++ b/resources/sass/detailOverview.scss
@@ -7,6 +7,21 @@
         }
     }
 }
+div.ekko-lightbox {
+    button.close {
+        span {
+            font-size: 2em;
+            z-index: 10;
+        }
+    }
+}
+
+div.ekko-lightbox div.modal-dialog {
+    max-width: 100% !important;
+}
+.ekko-lightbox-container {
+    height: 100% !important;
+}
 
 //modal code
 .products-modal-details {
@@ -55,6 +70,16 @@
 .product-modal-dialog {
     margin: 0 auto;
 }
+.modal-header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom: 0;
+    height: 50px;
+}
+
 // .modal-body {
 //     position: relative;
 //     flex: 1 1 auto;
@@ -190,6 +215,7 @@
             @include media-breakpoint-up(md) {
                 margin: 15px 0px;
             }
+
             .-images {
                 overflow-y: scroll;
                 height: 480px;
@@ -269,7 +295,27 @@
             }
         }
     }
-
+    @media screen and (max-width: 480px) {
+        div.ekko-lightbox {
+            .modal-header {
+                display: flex;
+                align-items: flex-start;
+                justify-content: space-between;
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
+                border-bottom: 0;
+                height: 25px;
+            }
+            .modal-dialog {
+                margin-top: 150px !important;
+            }
+            .close {
+                span {
+                    font-size: 1.5em;
+                }
+            }
+        }
+    }
     // .nav-tabs {
     //     display:none;
     // }
@@ -433,9 +479,5 @@
         border-color: $primary-color transparent transparent transparent;
         font-size: 14px;
         background: $yellow;
-    }
-}
-.ekko-lightbox-container {
-    .ekko-lightbox-nav-overlay {
     }
 }
